[gd_scene load_steps=7 format=3 uid="uid://bmkx4c8e104rp"]

[ext_resource type="Script" path="res://scripts/level_01.gd" id="1_sk33t"]
[ext_resource type="PackedScene" uid="uid://cx6nabf44rfab" path="res://scenes/player.tscn" id="2_4xi51"]
[ext_resource type="PackedScene" uid="uid://cxucv8w8gwu56" path="res://scenes/bullet.tscn" id="3_1bnmg"]
[ext_resource type="PackedScene" uid="uid://c3wnrd2mpx2cu" path="res://scenes/hud.tscn" id="4_5ived"]
[ext_resource type="PackedScene" uid="uid://chxss65sharc" path="res://scenes/enemy.tscn" id="4_crr7g"]
[ext_resource type="PackedScene" uid="uid://ied6crjgis8h" path="res://scenes/japan.tscn" id="5_jyxws"]

[node name="Level01" type="Node2D"]
script = ExtResource("1_sk33t")
enemy_scenes = Array[PackedScene]([ExtResource("4_crr7g"), ExtResource("5_jyxws")])

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_5ived")]

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("2_4xi51")]
position = Vector2(51, 88)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(270, 750)

[node name="Laser" parent="." instance=ExtResource("3_1bnmg")]

[node name="BulletContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_timer_timeout"]
